Building the layout

--- a/index.html
+++ b/index.html
@@ -12,6 +12,32 @@
         <title>nexter &mdash; your home, your freedom</title>
     </head>
     <body class="container">
-        
+        <div class="sidebar">
+            Side
+        </div>
+        <header class="header">
+            Head
+        </header>
+        <div class="realtors">
+            Top 3
+        </div>
+        <section class="features">
+            Features
+        </section>
+        <div class="story__pictures">
+            Pic
+        </div>
+        <div class="story__content">
+            Cont
+        </div>
+        <section class="homes">
+            homes
+        </section>
+        <section class="gallery">
+            gallery
+        </section>
+        <footer class="footer">
+            foot
+        </footer>
     </body>
 </html>
