--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
             </div>
         </section>
         <div class="story__pictures">
-            Pic
+            <img src="img/story-1.jpeg" alt="Couple with house" class="story__image-1">
+            <img src="img/story-2.jpeg" alt="New house" class="story__image-2">
         </div>
         <div class="story__content">
             <h3 class="heading-3 mb-2">Happy Customers</h3>
