--- a/index.html
+++ b/index.html
@@ -315,7 +315,18 @@
             </figure>
         </section>
         <footer class="footer">
-            foot
+            <ul class="nav">
+                <li class="nav__item"><a href="#" class="nav__link">Find your dream home</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">Request proposal</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">Download home planner</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">Contact us</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">Submit your property</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">Come work with us</a></li>
+            </ul>
+            <p class="copyright">
+                &copy; Copyright 2019 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua.
+            </p>
         </footer>
     </body>
 </html>
