--- a/index.html
+++ b/index.html
@@ -13,10 +13,20 @@
     </head>
     <body class="container">
         <div class="sidebar">
-            Side
+            <button class="nav-btn"></button>
         </div>
         <header class="header">
-            Head
+            <img class="header__logo" src="img/logo.png" alt="Nexter logo">
+            <h3 class="heading-3">Your own home</h3>
+            <h1 class="heading-1">The ultimate personal freedom</h1>
+            <button class="btn header__button">View our properties</button>
+            <div class="header__seenon-text">As seen on</div>
+            <div class="header__seenon-logos">
+                <img src="img/logo-bbc.png" alt="BBC logo">
+                <img src="img/logo-forbes.png" alt="Forbes logo">
+                <img src="img/logo-techcrunch.png" alt="Techcrunch logo">
+                <img src="img/logo-bi.png" alt="Bi logo">
+            </div>
         </header>
         <div class="realtors">
             Top 3
