--- a/index.html
+++ b/index.html
@@ -29,7 +29,24 @@
             </div>
         </header>
         <div class="realtors">
-            Top 3
+            <h3 class="heading-3">Top 3 Realtors</h3>
+            <div class="realtors__list">
+                <img class="realtors__img" src="img/realtor-1.jpeg" alt="Realtor 1">
+                <div class="realtors__details">
+                    <h4 class="heading-4 heading-4--light">Erik Finman</h4>
+                    <p class="realtors__sold">245 houses sold</p>
+                </div>
+                <img class="realtors__img" src="img/realtor-2.jpeg" alt="Realtor 2">
+                <div class="realtors__details">
+                    <h4 class="heading-4 heading-4--light">Kim Brown</h4>
+                    <p class="realtors__sold">212 houses sold</p>
+                </div>
+                <img class="realtors__img" src="img/realtor-3.jpeg" alt="Realtor 3">
+                <div class="realtors__details">
+                    <h4 class="heading-4 heading-4--light">Colby Ramsy</h4>
+                    <p class="realtors__sold">198 houses sold</p>
+                </div>
+            </div>
         </div>
         <section class="features">
             <div class="feature">
